--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+<link rel="icon" href="data:,">
 </head>
 <body>
   <div id="root"></div>
